examples/test/testpolicy5103.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5103
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key25: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value40
          key48: value36
      podSelector:
        matchLabels:
          key34: value41
          key10: value23
          key44: value33
